text task 4 fixed

--- a/Workshop_group2_final.ipynb
+++ b/Workshop_group2_final.ipynb
@@ -984,16 +984,14 @@
    "id": "1e5eeaf7",
    "metadata": {},
    "source": [
-    "Velocity changes were detected between base and monitoring survey by calculating and plotting the difference between the base and common source gathers (unfiltered, as surface waves are the same for both they automatically fall away)."
+    "Velocity changes were detected between base and monitoring survey by calculating and plotting the difference between the base and common source gathers (unfiltered, as surface waves are the same for both they automatically fall away). To match the changes to the layers, we overlayed the layers on the graph showing differences, and scaled y-limit of the graph to the first observerd differences. After the first differences, we can observe visually that at what layer the this occurs. This can be best done using the P-wave difference plot. The P-wave difference plot shows a single clear event because the Vz data is dominated by coherent P-wave arrivals that largely cancel during subtraction, except where the velocity change affects travel times. The S-wave difference plot appears noisier because S-waves are slower and more sensitive to velocity changes, and the Vx component contains more complex wavefield energy that does not cancel perfectly. The clear difference in the P-wave difference plot is observed at aproximately the 3rd line (at +- 1893 m), which corresponds with the 4th layer. "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "4cae904a",
    "metadata": {},
-   "source": [
-    "To match the changes to the layers, we overlayed the layers on the graph showing differences, and scaled y-limit of the graph to the first observerd differences. After the first differences, we can observe visually that at what layer the this occurs. This is approximatelly at the 4th layer (starting at +- 1893 m)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
